# lemondate

./: .gitignore  CMakeLists.txt  README.md  build.cmd
assets/embd_res/: kokoro_ipa.embd
docs/: kokoro-npu-future.md  strix-halo.md
ptt/: README.md  __init__.py  config.py  f5_tts_server.py  install.ps1  ptt_daemon.py  recorder.py  requirements.txt  whisper_wake_listener.py  window_check.py
scripts/: detect_npu.ps1
src/ggml/include/: ggml-cuda.h  ggml.h
src/ggml/src/: CMakeLists.txt  ggml-backend.cpp  ggml.c  gguf.cpp
src/ggml/src/ggml-cpu/: arch-fallback.h  ggml-cpu.c  ggml-cpu.cpp
src/ggml/src/ggml-cuda/: binbcast.cu  common.cuh  concat.cu  fattn.cu  ggml-cuda.cu  mmf.cu  mmq.cu  mmq.cuh  snake.cu  snake.cuh  ttscpp_ops.cu  ttscpp_ops.cuh
src/ggml/src/ggml-hip/: CMakeLists.txt
src/ggml/src/ggml-metal/: ggml-metal-device.m
src/ggml/src/ggml-vulkan/: ggml-vulkan.cpp
src/ggml/src/ggml-vulkan/vulkan-shaders/: vulkan-shaders-gen.cpp
src/kokoro-hip-server/: CMakeLists.txt  main.cpp
src/lemond/docs/server/apps/: open-hands.md
src/lemond/src/cpp/include/lemon/backends/: kokoro_server.h
src/lemond/src/cpp/resources/: backend_versions.json  defaults.json
src/lemond/src/cpp/server/: config_file.cpp  main.cpp  recipe_options.cpp  runtime_config.cpp  system_info.cpp
src/lemond/src/cpp/server/backends/: kokoro_server.cpp  whisper_server.cpp
src/ttscpp/: CMakeLists.txt
src/ttscpp/include/: phonemizer.h  ttscpp.h
src/ttscpp/src/: kokoro_model.cpp  kokoro_model.h  phonemizer.cpp  tts_model.cpp  tts_model.h  ttscpp.cpp  ttsutil.cpp
src/whisper/: CMakeLists.txt
src/whisper/src/: whisper.cpp
